[gd_scene load_steps=10 format=3 uid="uid://dmnhko1353yff"]

[ext_resource type="Script" path="res://assets/Scripts/main_menu.gd" id="1_s3fjm"]
[ext_resource type="Texture2D" uid="uid://dwemv5mvsspi2" path="res://assets/Sprite/Kids/green_kid.png" id="2_ixem2"]
[ext_resource type="Texture2D" uid="uid://dw6gc1r2541cv" path="res://assets/Sprite/cenario1.png" id="2_on5tt"]
[ext_resource type="Texture2D" uid="uid://cdyomvk6hfh3y" path="res://assets/Sprite/star.png" id="3_23hh4"]
[ext_resource type="Texture2D" uid="uid://jcskk2i62hon" path="res://assets/Sprite/Kids/blue_kid.png" id="5_f5vpc"]
[ext_resource type="Texture2D" uid="uid://hyabi47pk3pk" path="res://assets/Sprite/Kids/red_kid.png" id="6_jur3j"]
[ext_resource type="Texture2D" uid="uid://okwjlfnicput" path="res://assets/Sprite/teacher_2.png" id="8_0ldwe"]
[ext_resource type="Texture2D" uid="uid://bwry54vj2d0b6" path="res://assets/Sprite/logo.png" id="8_tlfvq"]

[sub_resource type="Theme" id="Theme_ysxye"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3fjm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_on5tt")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="Level1Button" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 363.0
offset_top = 424.0
offset_right = 411.0
offset_bottom = 472.0
pivot_offset = Vector2(21, 0)
theme = SubResource("Theme_ysxye")
texture_normal = ExtResource("2_ixem2")
ignore_texture_size = true
stretch_mode = 0

[node name="StarsContainerLvl1" type="HBoxContainer" parent="Level1Button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -7.0
offset_top = -16.0
offset_right = 49.0
alignment = 1

[node name="Lvl1Star1" type="TextureRect" parent="Level1Button/StarsContainerLvl1"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl1Star2" type="TextureRect" parent="Level1Button/StarsContainerLvl1"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl1Star3" type="TextureRect" parent="Level1Button/StarsContainerLvl1"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Level2Button" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 555.0
offset_top = 424.0
offset_right = 603.0
offset_bottom = 472.0
pivot_offset = Vector2(21, 0)
theme = SubResource("Theme_ysxye")
texture_normal = ExtResource("5_f5vpc")
ignore_texture_size = true
stretch_mode = 0

[node name="StarsContainerLvl2" type="HBoxContainer" parent="Level2Button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -7.0
offset_top = -16.0
offset_right = 49.0
alignment = 1

[node name="Lvl2Star1" type="TextureRect" parent="Level2Button/StarsContainerLvl2"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl2Star2" type="TextureRect" parent="Level2Button/StarsContainerLvl2"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl2Star3" type="TextureRect" parent="Level2Button/StarsContainerLvl2"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Level3Button" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 747.0
offset_top = 424.0
offset_right = 795.0
offset_bottom = 472.0
pivot_offset = Vector2(21, 0)
theme = SubResource("Theme_ysxye")
texture_normal = ExtResource("6_jur3j")
ignore_texture_size = true
stretch_mode = 0

[node name="StarsContainerLvl3" type="HBoxContainer" parent="Level3Button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -7.0
offset_top = -16.0
offset_right = 49.0
alignment = 1

[node name="Lvl3Star1" type="TextureRect" parent="Level3Button/StarsContainerLvl3"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl3Star2" type="TextureRect" parent="Level3Button/StarsContainerLvl3"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Lvl3Star3" type="TextureRect" parent="Level3Button/StarsContainerLvl3"]
layout_mode = 2
texture = ExtResource("3_23hh4")
expand_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(384, 360)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_0ldwe")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.0
offset_top = 80.0
offset_right = 231.0
offset_bottom = 252.0
grow_horizontal = 2
texture = ExtResource("8_tlfvq")

[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
